@@ -1,5 +1,7 @@
 2004-09-21  Peter Moulder  <pmoulder@river>
 
+	* src/libnr/nr-matrix-translate-ops.h (operator/): New function.
+
 	* src/libnr/nr-matrix-scale-ops.cpp: New file.
 	* src/libnr/nr-matrix-scale-ops.h (operator/(Matrix,scale)):
 	  New function.
